# NextOS

./: .gitignore  .gitmodules  Cargo.toml  README.md
gui/: Cargo.toml  build.rs
gui/src/: lib.rs
gui/ui/: boot.slint
src/: main.rs
